--- a/package.json
+++ b/package.json
@@ -1,25 +1,40 @@
 {
-  "name": "todo-api",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "@prisma/client": "^6.6.0",
-    "cors": "^2.8.5",
-    "express": "^5.1.0"
-  },
-  "devDependencies": {
-    "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.1",
-    "@types/node": "^22.14.1",
-    "prisma": "^6.6.0",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.8.3"
-  }
+    "name": "todo-api",
+    "version": "1.0.0",
+    "description": "Task Management API with authentication and comments",
+    "main": "dist/server.js",
+    "license": "ISC",
+    "scripts": {
+        "build": "tsc",
+        "start": "node dist/server.js",
+        "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+        "migrate": "prisma migrate dev",
+        "studio": "prisma studio",
+        "seed": "ts-node prisma/seed.ts",
+        "test": "jest"
+    },
+    "dependencies": {
+        "@prisma/client": "^5.4.2",
+        "bcrypt": "^5.1.1",
+        "cors": "^2.8.5",
+        "dotenv": "^16.3.1",
+        "express": "^4.18.2",
+        "jsonwebtoken": "^9.0.2"
+    },
+    "devDependencies": {
+        "@types/bcrypt": "^5.0.0",
+        "@types/cors": "^2.8.14",
+        "@types/express": "^4.17.19",
+        "@types/jest": "^29.5.5",
+        "@types/jsonwebtoken": "^9.0.9",
+        "@types/node": "^20.8.6",
+        "@types/supertest": "^2.0.14",
+        "jest": "^29.7.0",
+        "prisma": "^5.4.2",
+        "supertest": "^6.3.3",
+        "ts-jest": "^29.1.1",
+        "ts-node": "^10.9.1",
+        "ts-node-dev": "^2.0.0",
+        "typescript": "^5.2.2"
+    }
 }
