--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
     postgres:
-        image: postgres:17
+        image: postgres:latest
         container_name: postgres_db
         restart: always
         environment:
