--- a/package.json
+++ b/package.json
@@ -15,11 +15,16 @@
     },
     "dependencies": {
         "@prisma/client": "^5.4.2",
+        "@types/bcryptjs": "^2.4.6",
+        "axios": "^1.9.0",
         "bcrypt": "^5.1.1",
+        "bcryptjs": "^3.0.2",
+        "cookies-next": "^5.1.0",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
-        "jsonwebtoken": "^9.0.2"
+        "jsonwebtoken": "^9.0.2",
+        "next-auth": "^4.24.11"
     },
     "devDependencies": {
         "@types/bcrypt": "^5.0.0",
