--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
         "build": "tsc",
         "start": "node dist/server.js",
         "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
-        "migrate": "prisma migrate dev",
-        "studio": "prisma studio",
+        "migrate": "npx prisma migrate dev",
         "seed": "ts-node prisma/seed.ts",
         "test": "jest"
     },
